Verif/Test/Invalide/test_erreur_3.73-26.deca
// Description:
//    Programme soulevant l'erreur (3.73)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'float' et 'type_null' sont incompatibles avec l'opérateur binaire '/' (règle 3.73)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

float var;
{
   var = 1.0 / null;
}